k8s/environments/test/ingress-dash.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: bert-email-router-performance-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/issuer: letsencrypt
    # wget https://ip-ranges.amazonaws.com/ip-ranges.json
    # jq -r '.prefixes[] | select(.region=="eu-central-1" and .service=="EC2") | .ip_prefix' < ip-ranges.json
    # add this to 193.3.138.0/23, 193.3.140.0/22 for whitelist
    nginx.ingress.kubernetes.io/whitelist-source-range: 5.186.112.57/32, 80.62.25.85/32, 80.199.16.178/32, 185.50.193.187/32, 85.203.212.70/32, 128.76.195.7/32, 193.3.138.0/23, 193.3.140.0/22, 89.23.246.80/32, 81.29.40.244/32, 80.196.109.226/32, 80.167.206.12/32, 176.21.255.175/32, 3.5.136.0/22, 18.192.0.0/15, 64.252.89.0/24, 99.77.136.0/24, 52.58.0.0/15, 18.184.0.0/15, 52.57.0.0/16, 54.93.0.0/16, 3.124.0.0/14, 52.95.255.128/28, 18.156.0.0/14, 64.252.87.0/24, 99.77.158.0/24, 3.64.0.0/12, 99.77.2 [...]
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
spec:
  tls:
    - hosts:
        - performance.martech.non-prod.managed-eks.aws.nuuday.nu
      secretName: emailrouter-performance-ingress-certificate
  rules:
    - host: performance.martech.non-prod.managed-eks.aws.nuuday.nu
      http:
        paths:
          - path: /
            backend:
              serviceName: bert-email-router-dash
              servicePort: 8787
